Bug fix - use scene size for wrapping text labels exceeding the scene bounding rect.

BUG: 310125

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1325272